references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/OccurrenceUsage_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:f46a4adae2b1b8e6c82781a820d763cf27534c8163bfbeff47d8e6faad739309
size 2807
